# lambda-manager

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
fts/: support.py  test_launch_when_available.py  test_list_available_instance_types.py  test_list_instance_type_descriptions.py  test_list_instance_types.py
src/lambda_manager/: __init__.py  __main__.py  cli.py  dotenv.py  formatting.py  http.py  instance_types.py  lambda_api.py  retry.py  telegram.py
src/lambda_manager/commands/: __init__.py  launch.py  listing.py
tests/: test_cli_formatting.py  test_dotenv.py  test_http.py  test_instance_types.py  test_lambda_api.py  test_launch_command.py  test_telegram.py
