[project]
name = "lambda-manager"
version = "0.1.0"
description = "CLI helpers for managing Lambda Labs instances"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.1",
    "requests>=2.32.0",
]

[dependency-groups]
dev = ["pytest>=9"]

[tool.pytest.ini_options]
testpaths = ["tests", "fts"]
pythonpath = ["src"]
