[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "lambda-manager"
version = "0.1.0"
description = "CLI helpers for managing Lambda Labs instances"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.1",
    "requests>=2.32.0",
]

[project.scripts]
lambda-manager = "lambda_manager.cli:main"

[dependency-groups]
dev = ["pytest>=9"]

[tool.pytest.ini_options]
testpaths = ["tests", "fts"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/lambda_manager"]
